Gate hotel panel access behind admin approval, notify admins on registration
Hotel accounts are now created at registration but can't manage their
profile, rooms, services, prices, or availability until an agency
admin approves them (HotelService.getOwnedHotel now rejects non-ACTIVE
hotels with 403). Registration no longer auto-logs the hotel in --
they see a "Kaydınız Alındı" confirmation and log in separately with
the password they chose once approved. A HOTEL_ADMIN whose hotel is
still PENDING/REJECTED now sees a dedicated status screen instead of
the panel shell.

Every agency admin now gets an email when a new hotel registers, so
approvals don't rely on someone remembering to check the hotel list.
Both hotel-facing emails (registration confirmation, approval) got a
more polished, corporate-styled HTML template with a shared header/
footer and a CTA button. Also fixed the SMTP disable mechanism: the
spring.autoconfigure.exclude value was pointing at the Spring Boot 3.x
package for MailSenderAutoConfiguration, which no longer exists in
Spring Boot 4.1.1 (moved to org.springframework.boot.mail.autoconfigure)
-- the exclude was silently a no-op and every registration without a
real SMTP server was throwing a connection-refused error.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>